[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/protector_player.gd" type="Script" id=1]
[ext_resource path="res://scripts/wander.gd" type="Script" id=2]
[ext_resource path="res://imgs/npc/protectors.png" type="Texture" id=3]
[ext_resource path="res://imgs/player/shadow.png" type="Texture" id=4]
[ext_resource path="res://scenes/attack_sil.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemy_particles.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.51488
height = 9.74952

[sub_resource type="CircleShape2D" id=2]
radius = 14.9148

[sub_resource type="Animation" id=3]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79, 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87, 88, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79, 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87, 88, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "DEATH"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.972549, 0.337255, 0.337255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="VisualShaderNodeInput" id=23]
output_port_for_preview = 0
input_name = "uv"

[sub_resource type="VisualShaderNodeColorOp" id=26]
output_port_for_preview = 0
operator = 1

[sub_resource type="VisualShaderNodeColorConstant" id=27]
output_port_for_preview = 0
constant = Color( 1, 0.03125, 0.144775, 1 )

[sub_resource type="VisualShader" id=24]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0;
	n_out3p0 = vec3(UV,0.0);

// Color:5
	vec3 n_out5p0;
	float n_out5p1;
	n_out5p0 = vec3(1.000000,0.031250,0.144775);
	n_out5p1 = 1.000000;

// ColorOp:4
	vec3 n_out4p0;
	n_out4p0=abs(n_out3p0-n_out5p0);

// Output:0
	ALBEDO = n_out4p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -545, 78 )
nodes/fragment/3/node = SubResource( 23 )
nodes/fragment/3/position = Vector2( -320, 140 )
nodes/fragment/4/node = SubResource( 26 )
nodes/fragment/4/position = Vector2( 0, 200 )
nodes/fragment/5/node = SubResource( 27 )
nodes/fragment/5/position = Vector2( -340, 300 )
nodes/fragment/connections = PoolIntArray( 5, 0, 4, 1, 4, 0, 0, 0, 3, 0, 4, 0 )

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 24 )

[node name="protector_player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="enemy_hit" type="CollisionShape2D" parent="."]
position = Vector2( -0.35849, 31.1074 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="area_protector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_protector"]
position = Vector2( 0, -0.166718 )
shape = SubResource( 2 )

[node name="wander" type="Timer" parent="."]
wait_time = 1.5
script = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/Attack_Down = SubResource( 3 )
anims/Attack_Left = SubResource( 4 )
anims/Attack_LeftDown = SubResource( 5 )
anims/Attack_LeftTop = SubResource( 6 )
anims/Attack_Right = SubResource( 7 )
anims/Attack_RightDown = SubResource( 8 )
anims/Attack_RightTop = SubResource( 9 )
anims/Attack_Up = SubResource( 10 )
anims/Idle_Down = SubResource( 11 )
anims/Idle_Left = SubResource( 12 )
anims/Idle_LeftDown = SubResource( 13 )
anims/Idle_LeftTop = SubResource( 14 )
anims/Idle_Right = SubResource( 15 )
anims/Idle_RightDown = SubResource( 16 )
anims/Idle_RightTop = SubResource( 17 )
anims/Idle_Up = SubResource( 18 )

[node name="effect" type="AnimationPlayer" parent="."]
anims/DEATH = SubResource( 19 )
anims/damage = SubResource( 20 )
anims/death = SubResource( 21 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 25 )
texture = ExtResource( 3 )
vframes = 10
hframes = 9
frame = 48
region_rect = Rect2( 0, 0, 64, 64 )

[node name="shadow" type="Sprite" parent="sprite"]
modulate = Color( 1, 1, 1, 0.5 )
show_behind_parent = true
position = Vector2( 0, 31.1682 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 4 )

[node name="attack_sil" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -0.166718 )

[node name="death_particle" parent="." instance=ExtResource( 6 )]
modulate = Color( 0.988235, 0.576471, 0.913725, 0.784314 )
show_behind_parent = true

[connection signal="tree_entered" from="." to="." method="_on_enemy_tree_entered"]
[connection signal="timeout" from="wander" to="." method="_on_wander_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="effect" to="." method="_on_effect_animation_finished"]
